--- a/src/content/docs/builders/tools/gaming/eidolon.mdx
+++ b/src/content/docs/builders/tools/gaming/eidolon.mdx
@@ -24,13 +24,13 @@ Here’s an overview of what Eidolon SDK handles:
 
 - **Native Gas distribution**: Due to the zero gas fees of SKALE, in order to allow users performing transactions the dApps need to implement a gas token distribution or sFUEL distribution. Eidolon already takes care of that for the developers.
 
-## Implementation Example
+{/*## Implementation Example
 
 The Eidolon SDK aims to make the blockchain development side of things as simple and quick as possible.
 
 The simplicity explained above can be seen, for example, in the contracts deployment section of the Eidolon SDK.
 The image bellow exemplifies how quickly a ERC-20 token can be deployed.
 
-(Video of deploy in-game token)
+(Video of deploy in-game token)*/}
 
 </ToolLayout>
