--- a/src/content/docs/builders/tools/libraries/web/viem.mdx
+++ b/src/content/docs/builders/tools/libraries/web/viem.mdx
@@ -4,6 +4,7 @@ description: Intro to Viem
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
     introParagraph="Viem is a TypeScript interface for Ethereum that provides low-level stateless primitives for interacting with Ethereum."
@@ -19,59 +20,62 @@ Some of the main features are:
 
 ## Implementation Example
 
-**Package Install**
-<Tabs>
-<TabItem label="npm">
-```shell
-npm install viem
-```
-</TabItem>
-<TabItem label="yarn">
-```shell
-yarn add viem
-```
-</TabItem>
-</Tabs>
+<Steps>
+1. ##### Package Install
+    <Tabs>
+    <TabItem label="npm">
+    ```shell
+    npm install viem
+    ```
+    </TabItem>
+    <TabItem label="yarn">
+    ```shell
+    yarn add viem
+    ```
+    </TabItem>
+    </Tabs>
 
 
-**Contract Call Example**
-```typescript
-import { createWalletClient , custom , http , createPublicClient } from 'viem'
-import { privateKeyToAccount } from 'viem/accounts'
-import { skaleNebulaTestnet } from "viem/chains";
-import { abi } from "./contract";
-import dotenv from 'dotenv';
-dotenv.config();
+2. ##### Contract Call
+    ```typescript
+    import { createWalletClient , custom , http , createPublicClient } from 'viem'
+    import { privateKeyToAccount } from 'viem/accounts'
+    import { skaleNebulaTestnet } from "viem/chains";
+    import { abi } from "./contract";
+    import dotenv from 'dotenv';
+    dotenv.config();
 
-const publicClient = createPublicClient({
-    chain: skaleNebulaTestnet,
-    transport: http()
-  })
-
-const pk = process.env.PRIVATE_KEY || "";
-const account = privateKeyToAccount(`0x${pk}`);
-
-//Place here the contract address you deployed
-const contract_address = "0x4487AF7f18044A99927e81CC628F558F3D091419";
-
-const walletClient = createWalletClient({
-    chain: skaleNebulaTestnet,
-    transport: http(),
-  })
-
-
-// Send transaction to smart contract to update message
-async function ContractSendTx() {    
-    
-    const { request } = await publicClient.simulateContract({
-        address: contract_address,
-        abi: abi,
-        functionName: 'mintTest',
-        args: [account.address],
-        account
+    const publicClient = createPublicClient({
+        chain: skaleNebulaTestnet,
+        transport: http()
       })
-    const tx =  await walletClient.writeContract(request)
-    console.log(tx);
-}
-```
+
+    const pk = process.env.PRIVATE_KEY || "";
+    const account = privateKeyToAccount(`0x${pk}`);
+
+    //Place here the contract address you deployed
+    const contract_address = "0x4487AF7f18044A99927e81CC628F558F3D091419";
+
+    const walletClient = createWalletClient({
+        chain: skaleNebulaTestnet,
+        transport: http(),
+      })
+
+
+    // Send transaction to smart contract to update message
+    async function ContractSendTx() {    
+        
+        const { request } = await publicClient.simulateContract({
+            address: contract_address,
+            abi: abi,
+            functionName: 'mintTest',
+            args: [account.address],
+            account
+          })
+        const tx =  await walletClient.writeContract(request)
+        console.log(tx);
+    }
+    ```
+</Steps>
+
 </ToolLayout>
