--- a/src/content/docs/builders/tools/wallets/aggregator.mdx
+++ b/src/content/docs/builders/tools/wallets/aggregator.mdx
@@ -4,9 +4,13 @@ description: Intro to Wallet Aggregators
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import {Content as WalletConnect} from './aggregator/wallet-connect.mdx';
+import {Content as RainbowKit} from './aggregator/rainbowkit.mdx';
 
 
 <Tabs>
+<TabItem label="RainbowKit">
+<RainbowKit/>
+</TabItem>
 <TabItem label="Wallet Connect">
 <WalletConnect/>
 </TabItem>
