--- a/src/content/docs/builders/tools/wallets/custodial/stardust.mdx
+++ b/src/content/docs/builders/tools/wallets/custodial/stardust.mdx
@@ -17,7 +17,8 @@ With this solution it's possible to create a frictionless user onboarding experi
 
 The following example provides a number of examples on how to use Stardust WaaS. For the full code repo go [here](https://github.com/Dirt-Road-Development/stardust-examples)
 
-**Integration**
+##### Integration
+
 ````javascript
 const { StardustCustodialSDK, StardustApp, StardustWallet } = require("@stardust-gg/stardust-custodial-sdk");
 const { STARDUST_API_KEY, RPC_URL } = require("../../config");
