--- a/src/content/docs/builders/tools/wallets/non-custodial/ledger.mdx
+++ b/src/content/docs/builders/tools/wallets/non-custodial/ledger.mdx
@@ -3,6 +3,7 @@ title: Ledger
 description: Intro to Ledger
 ---
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
     introParagraph="It is a hardware wallet designed for secure cryptocurrency storage. It is a physical device that securely stores the user's private keys, which are essential for accessing and managing their cryptocurrencies."
@@ -17,31 +18,33 @@ For more information check the following link https://developers.ledger.com/docs
 
 ## Implementation Example
 
-**Package Install**
+<Steps>
+1. ##### Package Install
 
-If you want to use a Ledger Nano S/X/S Plus with the USB protocol
+    If you want to use a Ledger Nano S/X/S Plus with the USB protocol
 
-```shell
-npm install @ledgerhq/hw-transport-webusb
-```
-If you want to use a Ledger Nano S/X/S Plus with the HID protocol
+    ```shell
+    npm install @ledgerhq/hw-transport-webusb
+    ```
+    If you want to use a Ledger Nano S/X/S Plus with the HID protocol
 
-```shell
-npm install @ledgerhq/hw-transport-webhid
-```
+    ```shell
+    npm install @ledgerhq/hw-transport-webhid
+    ```
 
-**Integration**
-```javascript
-import TransportWebUSB from '@ledgerhq/hw-transport-webusb'
-import Eth from '@ledgerhq/hw-app-eth'
+2. ##### Integration
+    ```javascript
+    import TransportWebUSB from '@ledgerhq/hw-transport-webusb'
+    import Eth from '@ledgerhq/hw-app-eth'
 
-const transport = await TransportWebUSB.create();
-const evm_ledger = new Eth(transport);
+    const transport = await TransportWebUSB.create();
+    const evm_ledger = new Eth(transport);
 
-const path = "m/44'/60'/0'/0/0";
+    const path = "m/44'/60'/0'/0/0";
 
-const result = await evm_ledger.getAddress(path, false, true);
-console.log('Ledger Wallet Address:', result.address);
-```
+    const result = await evm_ledger.getAddress(path, false, true);
+    console.log('Ledger Wallet Address:', result.address);
+    ```
+</Steps>
 
 </ToolLayout>
