--- a/src/content/docs/builders/node-operators/full-sync-node.mdx
+++ b/src/content/docs/builders/node-operators/full-sync-node.mdx
@@ -4,6 +4,7 @@ description: Intro to Full Sync Node
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
     introParagraph="The Full-Sync Node is an available software implementation of a read-only SKALE Node that can help decrease the load on the core nodes of your chain."
@@ -68,43 +69,45 @@ Before proceeding, notify the core team of the IP address of your full-sync node
 
 ## Installation
 
-1. Download sync-node-cli tool
-```shell
-VERSION_NUM=2.2.0-sync-node.6 && sudo -E bash -c "curl -L https://github.com/skalenetwork/node-cli/releases/download/$VERSION_NUM/skale-$VERSION_NUM-`uname -s`-`uname -m`-sync >  /usr/local/bin/skale"
-```
+<Steps>
+1. ##### Download sync-node-cli tool
+    ```shell
+    VERSION_NUM=2.2.0-sync-node.6 && sudo -E bash -c "curl -L https://github.com/skalenetwork/node-cli/releases/download/$VERSION_NUM/skale-$VERSION_NUM-`uname -s`-`uname -m`-sync >  /usr/local/bin/skale"
+    ```
 
-2. Apply executable permissions to the downloaded binary:
-```shell
-chmod +x /usr/local/bin/skale
-```
+2. ##### Apply executable permissions to the downloaded binary:
+    ```shell
+    chmod +x /usr/local/bin/skale
+    ```
 
-3. Test the installation
-```shell
-skale --help
-```
+3. ##### Test the installation
+    ```shell
+    skale --help
+    ```
 
-4. Prepare `.env` file:
+4. ##### Prepare `.env` file:
 
-```
-CONTAINER_CONFIGS_STREAM="2.2.0-sync-node.0"
-ENDPOINT=[[By Validator], YOUR GETH/INFURA ENDPOINT]
-MANAGER_CONTRACTS_ABI_URL="https://raw.githubusercontent.com/skalenetwork/skale-network/master/releases/mainnet/skale-manager/1.9.0/skale-manager-1.9.0-mainnet-abi.json"
-IMA_CONTRACTS_ABI_URL="https://raw.githubusercontent.com/skalenetwork/skale-network/master/releases/mainnet/IMA/1.3.0/mainnet/abi.json"
-DISK_MOUNTPOINT=[[By Validator], your attached storage /dev/sda or /dev/xvdd (this is an example. You just need to use your 2TB block device)]
-DOCKER_LVMPY_STREAM="1.0.2-stable.0"
-ENV_TYPE="mainnet"
+    ```
+    CONTAINER_CONFIGS_STREAM="2.2.0-sync-node.0"
+    ENDPOINT=[[By Validator], YOUR GETH/INFURA ENDPOINT]
+    MANAGER_CONTRACTS_ABI_URL="https://raw.githubusercontent.com/skalenetwork/skale-network/master/releases/mainnet/skale-manager/1.9.0/skale-manager-1.9.0-mainnet-abi.json"
+    IMA_CONTRACTS_ABI_URL="https://raw.githubusercontent.com/skalenetwork/skale-network/master/releases/mainnet/IMA/1.3.0/mainnet/abi.json"
+    DISK_MOUNTPOINT=[[By Validator], your attached storage /dev/sda or /dev/xvdd (this is an example. You just need to use your 2TB block device)]
+    DOCKER_LVMPY_STREAM="1.0.2-stable.0"
+    ENV_TYPE="mainnet"
 
-SCHAIN_NAME=[[By Validator], SCHAIN NAME FOR YOUR SYNC NODE]
-```
+    SCHAIN_NAME=[[By Validator], SCHAIN NAME FOR YOUR SYNC NODE]
+    ```
 
-5. Init sync node:
-```shell
-skale sync-node init [ENV_FILE_PATH]
-```
+5. ##### Init sync node:
+    ```shell
+    skale sync-node init [ENV_FILE_PATH]
+    ```
 
-6. Wait until your sync node will be inited
-7. After the node is successfully inited, wait until `skaled` will download the snapshot and starts catchup blocks (usually 15–30 minutes)
+6. ##### Wait until your sync node will be inited
+7. ##### After the node is successfully inited, wait until `skaled` will download the snapshot and starts catchup blocks (usually 15–30 minutes)
 
+</Steps>
 
 ### Setup SSL certs
 
