--- a/src/content/docs/builders/tools/bridges/layer-zero.mdx
+++ b/src/content/docs/builders/tools/bridges/layer-zero.mdx
@@ -4,6 +4,7 @@ description: Intro to Layer Zero
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
     introParagraph="LayerZero is an interoperability protocol designed to link blockchains, enabling developers to create fluid omnichain applications, tokens, and experiences. Utilizing immutable on-chain endpoints, a customizable Security Stack, and an open set of Executors, the protocol facilitates the transfer of censorship-resistant messages across chains."
@@ -18,80 +19,89 @@ The following example shows how to create and bridge an ERC-20 token between SKA
 
 For more information check the [github repository](https://github.com/TheGreatAxios/skale-layerzero-examples/tree/main) created by the SKALE team.
 
-**Run the command**
-```sh
-git clone https://github.com/TheGreatAxios/skale-layerzero-examples.git && cd skale-layerzero-examples/oft-example
-```
+<Steps>
 
-**Package Install**
-```sh
-pnpm install
-```
+1. ##### Repository clone
+    
+    ```sh
+    git clone https://github.com/TheGreatAxios/skale-layerzero-examples.git && cd skale-layerzero-examples/oft-example
+    ```
 
-**Rename .env.example -> .env**
-**Choose your preferred means of setting up your deployer wallet/account**
-```sh
-MNEMONIC="test test test test test test test test test test test junk"
-or...
-PRIVATE_KEY="0xabc...def"
-```
+2. ##### Package Install
 
-**To deploy you contracts run**
+    ```sh
+    pnpm install
+    ```
 
-:::tip[Note]
-Please deploy the contract in the chains you want to enable bridging 
-:::
-```sh
-npx hardhat lz:deploy
-```
+3. ##### .env file
 
-With the ERC-20 contracts deployed on the desired chains we can enable bridging those asserts.
+    1. Rename .env.example -> .env
+    2. Choose your preferred means of setting up your deployer wallet/account
 
-This is a two step process. The created examples are under the `scripts` folder and it shows the bridging tokens between two testnet chains Mumbai Testnet and SKALE Europa Testnet. 
+        ```sh
+        MNEMONIC="test test test test test test test test test test test junk"
+        or...
+        PRIVATE_KEY="0xabc...def"
+        ```
 
-Once you've finished configuring your OFT, you can open the messaging channel and connect your OFT deployment to different chains by calling setPeer. 
+4. ##### Contract deploy
 
-1. **Set Peer**
+    :::tip[Note]
+    Please deploy the contract in the chains you want to enable bridging 
+    :::
+    ```sh
+    npx hardhat lz:deploy
+    ```
 
-<Tabs>
-<TabItem label="Generic Example">
-```sh
-npx hardhat setpeer --origin <origin_chain_name> --destination <destination_chain_name> --network <chain_where_tx_will_be_initiated>
-```
-</TabItem>
-<TabItem label="Set Peer on Europa">
-```sh
-npx hardhat setpeer --origin europa --destination mumbai --network europa   
-```
-</TabItem>
-<TabItem label="Set Peer on Mumbai">
-```sh
-npx hardhat setpeer --origin mumbai --destination europa --network mumbai   
-```
-</TabItem>
-</Tabs>
+    With the ERC-20 contracts deployed on the desired chains we can enable bridging those asserts.
 
-2. **Bridge**
+    This is a two step process. The created examples are under the `scripts` folder and it shows the bridging tokens between two testnet chains Mumbai Testnet and SKALE Europa Testnet. 
 
-After setting the peers you can now proceed you bridging the tokens.
+    Once you've finished configuring your OFT, you can open the messaging channel and connect your OFT deployment to different chains by calling setPeer. 
 
-<Tabs>
-<TabItem label="Generic Example">
-```sh
-npx hardhat bridge --origin <origin_chain_name> --destination <destination_chain_name> --amount <amount_to_bridge> --network <chain_where_tx_will_be_initiated>
-```
-</TabItem>
-<TabItem label="Bridge Europa to Mumbai">
-```sh
-npx hardhat bridge --origin europa --destination mumbai --amount 123 --network europa
-```
-</TabItem>
-<TabItem label="Bridge Mumbai to Europa">
-```sh
-npx hardhat bridge --origin mumbai --destination europa --amount 123 --network mumbai
-```
-</TabItem>
-</Tabs>
+5. ##### Set Peer
+
+    <Tabs>
+    <TabItem label="Generic Example">
+    ```sh
+    npx hardhat setpeer --origin <origin_chain_name> --destination <destination_chain_name> --network <chain_where_tx_will_be_initiated>
+    ```
+    </TabItem>
+    <TabItem label="Set Peer on Europa">
+    ```sh
+    npx hardhat setpeer --origin europa --destination mumbai --network europa   
+    ```
+    </TabItem>
+    <TabItem label="Set Peer on Mumbai">
+    ```sh
+    npx hardhat setpeer --origin mumbai --destination europa --network mumbai   
+    ```
+    </TabItem>
+    </Tabs>
+
+6. ##### Bridge
+
+    After setting the peers you can now proceed you bridging the tokens.
+
+    <Tabs>
+    <TabItem label="Generic Example">
+    ```sh
+    npx hardhat bridge --origin <origin_chain_name> --destination <destination_chain_name> --amount <amount_to_bridge> --network <chain_where_tx_will_be_initiated>
+    ```
+    </TabItem>
+    <TabItem label="Bridge Europa to Mumbai">
+    ```sh
+    npx hardhat bridge --origin europa --destination mumbai --amount 123 --network europa
+    ```
+    </TabItem>
+    <TabItem label="Bridge Mumbai to Europa">
+    ```sh
+    npx hardhat bridge --origin mumbai --destination europa --amount 123 --network mumbai
+    ```
+    </TabItem>
+    </Tabs>
+
+</Steps>
 
 </ToolLayout>
 
