--- a/src/content/docs/builders/tools/contracts/index.mdx
+++ b/src/content/docs/builders/tools/contracts/index.mdx
@@ -25,8 +25,8 @@ Additionally, SKALE provides common industry contract features, including Multic
 		href="/builders/tools/contracts/remix"
 		description=""
 	/>
-	{/*<LinkCard
-		title="OpenZeppelin"
+	<LinkCard
+		title="Openzeppelin"
 		href="/builders/tools/contracts/openzeppelin"
 		description=""
 	/>
@@ -34,5 +34,5 @@ Additionally, SKALE provides common industry contract features, including Multic
 		title="Multicall"
 		href="/builders/tools/contracts/multicall"
 		description="Multicall smart contract deployed on SKALE Chains"
-	/>*/}
+	/>
 </CardGrid>
