--- a/src/content/docs/builders/tools/data/the-graph.mdx
+++ b/src/content/docs/builders/tools/data/the-graph.mdx
@@ -4,6 +4,7 @@ description: Intro to the Graph
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
     introParagraph="The Graph is a indexing protocol and be used to create subgraphs on SKALE Chain data."
@@ -20,172 +21,180 @@ You can reach out to the Graph community to request a Graph node, or you may run
 For proper compatibility, you must point a Graph node to a SKALE Archive node.
 :::
 
-1. Install Prerequisites
-* docker
-* docker-compose
-* nodejs
-* npm
-* yarn
-* truffle
+<Steps>
 
-2. Get a SKALE Endpoint
-Get the SKALE chain endpoint assigned to your project [here](https://testnet.portal.skale.space/chains) OR use your your own dedicated chain as available.
+  1. ##### Install Prerequisites
+      * docker
+      * docker-compose
+      * nodejs
+      * npm
+      * yarn
+      * truffle
 
-3. Configure a Graph Node
-```shell
-git clone https://github.com/graphprotocol/graph-node/
-cd graph-node/docker
-```
-Then modify the `docker-compose.yml` file:
-```yml
-ethereum: 'skale:http://host.docker.internal:15000' <1>
-...
-extra_hosts:
-      - "host.docker.internal:host-gateway" <2>
-```
-(1) Replace with your SKALE Chain endpoint if not using the SKALE-IMA-SDK.
-(2) Add this if using `host.docker.internal` on a Linux machine.
+  2. ##### Get a SKALE Endpoint
+      Get the SKALE chain endpoint assigned to your project [here](https://testnet.portal.skale.space/chains) OR use your your own dedicated chain as available.
 
-4. Start the Graph Node
-```shell
-docker-compose up -d 
-```
-To follow the container output, run `docker logs docker_graph-node_1 --follow`
+  3. ##### Configure a Graph Node
+      ```shell
+      git clone https://github.com/graphprotocol/graph-node/
+      cd graph-node/docker
+      ```
+      Then modify the `docker-compose.yml` file:
+      ```yml
+      ethereum: 'skale:http://host.docker.internal:15000' <1>
+      ...
+      extra_hosts:
+            - "host.docker.internal:host-gateway" <2>
+      ```
+      (1) Replace with your SKALE Chain endpoint if not using the SKALE-IMA-SDK.
+      (2) Add this if using `host.docker.internal` on a Linux machine.
 
-5. Prepare the Subgraph test
-In another terminal on the same machine, execute:
-```shell
-git clone https://github.com/skalenetwork/se-integrations/
-cd se-integrations/graph-protocol/
-```
-Modify the .env file. 
-```yml
-SKALE_CHAIN=https://YOURSKALECHAINIP:PORT
-ACCOUNT=yourAccountFromMetamask
-PRIVATE_KEY=<PRIVATE_KEY>
-CONTRACT_ADDRESS=<CONTRACT_ADDRESS> <1>
-```
-(1) You will add the contract address in step 7.
+  4. ##### Start the Graph Node
+      ```shell
+      docker-compose up -d 
+      ```
+      To follow the container output, run `docker logs docker_graph-node_1 --follow`
 
-6. Deploy Test contract
-```shell
-npm install
-truffle compile
-truffle migrate
-```
+  5. ##### Prepare the Subgraph test
+      In another terminal on the same machine, execute:
+      ```shell
+      git clone https://github.com/skalenetwork/se-integrations/
+      cd se-integrations/graph-protocol/
+      ```
+      Modify the .env file. 
+      ```yml
+      SKALE_CHAIN=https://YOURSKALECHAINIP:PORT
+      ACCOUNT=yourAccountFromMetamask
+      PRIVATE_KEY=<PRIVATE_KEY>
+      CONTRACT_ADDRESS=<CONTRACT_ADDRESS> <1>
+      ```
+      (1) You will add the contract address in step 7.
 
-7. Add deployed MyToken Contract address to subgraph.yaml
-```yaml
-...
-dataSources:
-  - kind: ethereum/contract
-    name: MyToken
-    network: skale <1>
-    source:
-      address: 'CONTRACT_ADDRESS' <2>
-      abi: MyToken
-...
-```
-(1) Change from `mainnet` to `skale` to match docker-compose.yml in graph-node.
-(2) Replace with deployed contract address.
+  6. ##### Deploy Test contract
+      ```shell
+      npm install
+      truffle compile
+      truffle migrate
+      ```
 
-8. Add deployed MyToken contract address to .env file
+  7. ##### Add deployed MyToken Contract address to subgraph.yaml
+      ```yaml
+      ...
+      dataSources:
+        - kind: ethereum/contract
+          name: MyToken
+          network: skale <1>
+          source:
+            address: 'CONTRACT_ADDRESS' <2>
+            abi: MyToken
+      ...
+      ```
+      (1) Change from `mainnet` to `skale` to match docker-compose.yml in graph-node.
+      (2) Replace with deployed contract address.
 
-9. Execute yarn
-```shell
-yarn && yarn codegen
-```
+  8. ##### Add deployed MyToken contract address to .env file
 
-10. Create local Subgraph
-```shell
-yarn create-local
-```
-Expected output:
-```
-Created subgraph: skaleToken
-Done in 1.04s.
-```
-Expected output in Graph-node container:
-```shell
-Dec 17 23:18:38.892 INFO Received subgraph_create request, params: SubgraphCreateParams { name: SubgraphName("skaleToken") }, component: JsonRpcServer
-```
+  9. ##### Execute yarn
+      ```shell
+      yarn && yarn codegen
+      ```
 
-11. Deploy to Local
-```shell
-yarn deploy-local
-```
+  10. ##### Create local Subgraph
+      ```shell
+      yarn create-local
+      ```
+      Expected output:
+      
+      ```shell
+      Created subgraph: skaleToken
+      Done in 1.04s.
+      ```
+      Expected output in Graph-node container:
+      
+      ```shell
+      Dec 17 23:18:38.892 INFO Received subgraph_create request, 
+      params: SubgraphCreateParams { 
+          name: SubgraphName("skaleToken") 
+          }, component: JsonRpcServer
+      ```
 
-12. Verify graph-node terminal
-Expected output in graph-node container:
-```shell
-graph-node_1  | Apr 23 20:20:58.952 INFO Scanning blocks [0, 0], range_size: 1, subgraph_id: QmbWZiRDpGb95WkA1QH8UM3wsUMZeBmr6ZW2UJaMtGZADB, component: SubgraphInstanceManager > BlockStream
-```
+  11. ##### Deploy to Local
+      ```shell
+      yarn deploy-local
+      ```
 
-13. Execute graph test
-```shell
-truffle test --network skale test/myToken.test.forgraph.js
-```
-Expected output:
-```shell
-MyToken
-...
-    ✓ In the test (237ms)
+  12. ##### Verify graph-node terminal
+      Expected output in graph-node container:
+      ```shell
+      graph-node_1  | Apr 23 20:20:58.952 INFO Scanning blocks [0, 0], range_size: 1, subgraph_id: QmbWZiRDpGb95WkA1QH8UM3wsUMZeBmr6ZW2UJaMtGZADB, component: SubgraphInstanceManager > BlockStream
+      ```
 
-
-  1 passing (242ms)
-```
-
-14. Execute token test
-
-```shell
-truffle test --network skale test/myToken.test.js
-```
-Output:
-```shell
-...
-MyBalance
-  ✓ enough account balance
-
-MyToken
-  ✓ deploys a contract
-  ✓ has a default token value (1042ms)
-  ✓ can update token value (1042ms)
+  13. ##### Execute graph test
+      ```shell
+      truffle test --network skale test/myToken.test.forgraph.js
+      ```
+      Expected output:
+      ```shell
+      MyToken
+      ...
+          ✓ In the test (237ms)
 
 
-4 passing (3s)
-```
+        1 passing (242ms)
+      ```
 
-15. Check your GraphQL:
+  14. ##### Execute token test
 
-http://localhost:8000/subgraphs/name/skaleToken/graphql
+      ```shell
+      truffle test --network skale test/myToken.test.js
+      ```
+      Output:
+      ```shell
+      ...
+      MyBalance
+        ✓ enough account balance
 
-16. Perform a test query:
-```
-{
-  myTokens(orderBy: tokenValue, orderDirection: asc) {
-    id
-    owner
-  }
-}
-```
+      MyToken
+        ✓ deploys a contract
+        ✓ has a default token value (1042ms)
+        ✓ can update token value (1042ms)
 
-Expected output:
-```
-{
-  "data": {
-    "myTokens": [
+
+      4 passing (3s)
+      ```
+
+  15. ##### Check your GraphQL
+
+      http://localhost:8000/subgraphs/name/skaleToken/graphql
+
+  16. ##### Perform a test query
+      ```shell
       {
-        "id": "0x2",
-        "owner": "..."
-      }...
-    ]
-  }
-}
-```
+        myTokens(orderBy: tokenValue, orderDirection: asc) {
+          id
+          owner
+        }
+      }
+      ```
+
+      Expected output:
+      ```shell
+      {
+        "data":{
+          "myTokens": [
+            {"id": "0x2", "owner": "..."
+            }...
+          ]
+        }
+       }
+      ```
+</Steps>
 </TabItem>
+
 <TabItem label="Graph Node Service">
 Coming soon.
 </TabItem>
 </Tabs>
+
 
 </ToolLayout>
