--- a/src/content/docs/builders/tools/gaming/emergence.mdx
+++ b/src/content/docs/builders/tools/gaming/emergence.mdx
@@ -4,6 +4,7 @@ description: Intro to Emergence SDK
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
     introParagraph="Emergence serves as a Web3 SDK tailored for game developers, seamlessly integrating with Unreal Engine and Unity through."
@@ -22,53 +23,54 @@ It provides features such as:
 <Tabs>
 <TabItem label="Unity">
 
-**Package Install**
-- Get the package on the [Unity Asset Store](https://assetstore.unity.com/packages/decentralization/infrastructure/emergence-sdk-252187)
+<Steps>
+1. ##### Package Install
+    Get the package on the [Unity Asset Store](https://assetstore.unity.com/packages/decentralization/infrastructure/emergence-sdk-252187)
 
-**Contract Call Example**
-```c#
-public class NFTMint : MonoBehaviour
-{
-
-    public DeployedSmartContract deployedSmart;
-
-    // Public string array that is used as input data for the smart contract method
-    private string[] body = new string[] { "0x...SomeAddress" };
-    // Public string that is used as input data for the smart contract method
-    private string value = "0";
-
-    private IContractService ContractService => contractService ??= EmergenceServices.GetService<IContractService>();
-    private IContractService contractService;
-
-
-    private void Awake()
+2. ##### Contract Call
+    ```c#
+    public class NFTMint : MonoBehaviour
     {
-     //   contractService = EmergenceServices.GetService<IContractService>();
+
+        public DeployedSmartContract deployedSmart;
+
+        // Public string array that is used as input data for the smart contract method
+        private string[] body = new string[] { "0x...SomeAddress" };
+        // Public string that is used as input data for the smart contract method
+        private string value = "0";
+
+        private IContractService ContractService => contractService ??= EmergenceServices.GetService<IContractService>();
+        private IContractService contractService;
+
+
+        private void Awake()
+        {
+        //   contractService = EmergenceServices.GetService<IContractService>();
+        }
+
+        // Start is called before the first frame update
+        void Start()
+        {
+            WriteMethod();
+        }
+
+
+        // This method is called once the contract is loaded
+        private void WriteMethod()
+        {
+            // Creates a ContractInfo object with the smart contract address, method name, network name, and default node URL
+            var contractInfo = new ContractInfo(deployedSmart, "safeMint");
+            ContractService.WriteMethod(contractInfo, "", "100000", value, body, OnWriteSuccess, EmergenceLogger.LogError);
+        }
+
+        private void OnWriteSuccess(BaseResponse<string> response)
+        {
+            // Logs the response to the console
+            Debug.Log($"{response}");
+        }
     }
-
-    // Start is called before the first frame update
-    void Start()
-    {
-        WriteMethod();
-    }
-
-
-    // This method is called once the contract is loaded
-    private void WriteMethod()
-    {
-        // Creates a ContractInfo object with the smart contract address, method name, network name, and default node URL
-        var contractInfo = new ContractInfo(deployedSmart, "safeMint");
-        ContractService.WriteMethod(contractInfo, "", "100000", value, body, OnWriteSuccess, EmergenceLogger.LogError);
-    }
-
-    private void OnWriteSuccess(BaseResponse<string> response)
-    {
-        // Logs the response to the console
-        Debug.Log($"{response}");
-    }
-}
-```
-
+    ```
+</Steps>
 </TabItem>
 </Tabs>
 </ToolLayout>
