--- a/src/content/docs/builders/tools/libraries/mobile/web3dart.mdx
+++ b/src/content/docs/builders/tools/libraries/mobile/web3dart.mdx
@@ -4,6 +4,8 @@ description: Intro to Web3Dart
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
+
 
 <ToolLayout
 	introParagraph="Library written in dart that enables interaction with EVM compatible blockchains."
@@ -21,81 +23,83 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 ## Implementation Example
 
-**Package Install**
-```shell
-dart pub add web3dart
-```
+<Steps>
+1. ##### Package Install
+    ```shell
+    dart pub add web3dart
+    ```
 
-**Contract Call Example**
-```dart
-// ignore_for_file: public_member_api_docs
-import 'dart:io';
+2. ##### Contract Call
+    ```dart
+    // ignore_for_file: public_member_api_docs
+    import 'dart:io';
 
-import 'package:http/http.dart';
-import 'package:web3dart/web3dart.dart';
-import 'package:path/path.dart' show join, dirname;
-import 'package:web_socket_channel/io.dart';
-import 'chains.dart';
+    import 'package:http/http.dart';
+    import 'package:web3dart/web3dart.dart';
+    import 'package:path/path.dart' show join, dirname;
+    import 'package:web_socket_channel/io.dart';
+    import 'chains.dart';
 
-//Private Key
-const String privateKey ='your pk';
+    //Private Key
+    const String privateKey ='your pk';
 
-//Select which chain you want to use
-Chain? selected_SKALE_chain = chains[ChainKey.nebula];
+    //Select which chain you want to use
+    Chain? selected_SKALE_chain = chains[ChainKey.nebula];
 
-// SKALE Chain RPC
-String rpcUrl = selected_SKALE_chain?.chainInfo?.testnet.rpcUrl ?? "no url";
-// selected SKALE Chain ID
-int chainId = selected_SKALE_chain?.chainInfo?.testnet.chainId ?? 0;
+    // SKALE Chain RPC
+    String rpcUrl = selected_SKALE_chain?.chainInfo?.testnet.rpcUrl ?? "no url";
+    // selected SKALE Chain ID
+    int chainId = selected_SKALE_chain?.chainInfo?.testnet.chainId ?? 0;
 
-// ABI of ERC_721 example contract
-final File abiFile = File(join(dirname(Platform.script.path), 'abi.json'));
+    // ABI of ERC_721 example contract
+    final File abiFile = File(join(dirname(Platform.script.path), 'abi.json'));
 
 
-Future<void> main() async {
+    Future<void> main() async {
 
-  // start a client we can use to send transactions
-  final client = Web3Client(rpcUrl, Client());
+      // start a client we can use to send transactions
+      final client = Web3Client(rpcUrl, Client());
 
-  final EthereumAddress mint_to_address = EthereumAddress.fromHex('address to mint to');
+      final EthereumAddress mint_to_address = EthereumAddress.fromHex('address to mint to');
 
-  String address = selected_SKALE_chain?.chainInfo?.testnet.contracts[0].address ?? "no address";
+      String address = selected_SKALE_chain?.chainInfo?.testnet.contracts[0].address ?? "no address";
 
-  final EthereumAddress contract_address = EthereumAddress.fromHex(address);
-  
-  //Credentials to sign tx
-  final credentials = EthPrivateKey.fromHex(privateKey);
+      final EthereumAddress contract_address = EthereumAddress.fromHex(address);
+      
+      //Credentials to sign tx
+      final credentials = EthPrivateKey.fromHex(privateKey);
 
-  //ABI file as string
-  final abiCode = await abiFile.readAsString();
-  
-  final contract = DeployedContract(ContractAbi.fromJson(abiCode, 'MyToken'), contract_address);
-  //Selected contract function to call
-  final mintFunction = contract.function('mintTest');
+      //ABI file as string
+      final abiCode = await abiFile.readAsString();
+      
+      final contract = DeployedContract(ContractAbi.fromJson(abiCode, 'MyToken'), contract_address);
+      //Selected contract function to call
+      final mintFunction = contract.function('mintTest');
 
-  // Mint function call
-  //Note: The chainId needs to be passes otherwise it will throw the error: -32004 Invalid transaction signature.
-  final tx = await client.sendTransaction(
-    credentials,
-    Transaction.callContract(
-      contract: contract,
-      function: mintFunction,
-      parameters: [mint_to_address],
-    ),
-    chainId: chainId
-  );
+      // Mint function call
+      //Note: The chainId needs to be passes otherwise it will throw the error: -32004 Invalid transaction signature.
+      final tx = await client.sendTransaction(
+        credentials,
+        Transaction.callContract(
+          contract: contract,
+          function: mintFunction,
+          parameters: [mint_to_address],
+        ),
+        chainId: chainId
+      );
 
-  // Transaction Receipt
-  final receipt = await client.addedBlocks().asyncMap((_) => client.getTransactionReceipt(tx)).firstWhere((receipt) => receipt != null);
-  print(receipt);
+      // Transaction Receipt
+      final receipt = await client.addedBlocks().asyncMap((_) => client.getTransactionReceipt(tx)).firstWhere((receipt) => receipt != null);
+      print(receipt);
 
-  await client.dispose();
-}
-```
+      await client.dispose();
+    }
+    ```
 
-**Run Dart Script**
-```shell
-dart web/main.dart 
-```
+3. ##### Run
+    ```shell
+    dart web/main.dart 
+    ```
+</Steps>
 
 </ToolLayout>
