--- a/src/content/docs/builders/tools/libraries/web/ethersv6.mdx
+++ b/src/content/docs/builders/tools/libraries/web/ethersv6.mdx
@@ -4,6 +4,7 @@ description: Intro to EthersV6
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
     introParagraph="The ethers.js library is a comprehensive and concise library for engaging with the Ethereum Blockchain and its surrounding ecosystem."
@@ -30,48 +31,51 @@ The biggest difference between v5 and v6 is in the use of modern ES6 features. T
 
 ## Implementation Example
 
-**Package Install**
-<Tabs>
-<TabItem label="npm">
-```shell
-npm install ethers
-```
-</TabItem>
-<TabItem label="yarn">
-```shell
-yarn add ethers
-```
-</TabItem>
-</Tabs>
+<Steps>
 
-**Contract Call Example**
-```typescript
-import { ethers } from 'ethers';
-import { abi } from "./contract";
-import { chains } from "./chains"
-import dotenv from 'dotenv';
-dotenv.config();
+1. ##### Package Install
+    <Tabs>
+    <TabItem label="npm">
+    ```shell
+    npm install ethers
+    ```
+    </TabItem>
+    <TabItem label="yarn">
+    ```shell
+    yarn add ethers
+    ```
+    </TabItem>
+    </Tabs>
 
-//Select which SKALE chain you want to use
-const selectedChain = chains.nebula;
+2. ##### Contract Call
+    ```typescript
+    import { ethers } from 'ethers';
+    import { abi } from "./contract";
+    import { chains } from "./chains"
+    import dotenv from 'dotenv';
+    dotenv.config();
 
-const provider = new ethers.JsonRpcProvider(selectedChain.chainInfo.testnet.rpcUrl);
+    //Select which SKALE chain you want to use
+    const selectedChain = chains.nebula;
 
-const pk = process.env.PRIVATE_KEY || "";
-const signer = new ethers.Wallet(pk, provider);
+    const provider = new ethers.JsonRpcProvider(selectedChain.chainInfo.testnet.rpcUrl);
 
-const contract = new ethers.Contract(selectedChain.chainInfo.testnet.contracts[0].address, abi, signer);
+    const pk = process.env.PRIVATE_KEY || "";
+    const signer = new ethers.Wallet(pk, provider);
 
-// Send transaction to smart contract to update message
-async function ContractSendTx() {    
-    
-    const request = await contract.mintTest.populateTransaction(signer.address);
-    const tx = await signer.sendTransaction(request);
-    const receipt = await tx.wait();
+    const contract = new ethers.Contract(selectedChain.chainInfo.testnet.contracts[0].address, abi, signer);
 
-    console.log(receipt);
+    // Send transaction to smart contract to update message
+    async function ContractSendTx() {    
+        
+        const request = await contract.mintTest.populateTransaction(signer.address);
+        const tx = await signer.sendTransaction(request);
+        const receipt = await tx.wait();
 
-}
-```
+        console.log(receipt);
+
+    }
+    ```
+</Steps>
 
 </ToolLayout>
