--- a/src/content/docs/builders/tools/wallets/aggregator/wallet-connect.mdx
+++ b/src/content/docs/builders/tools/wallets/aggregator/wallet-connect.mdx
@@ -3,6 +3,8 @@ title: Wallet Connect
 description: Intro to Wallet Connect
 ---
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import {Steps} from "@astrojs/starlight/components";
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 <ToolLayout
     introParagraph="The Wallet Connect is an open source protocol to link dApps to mobile wallets using deep linking, and allows you to integrate your dApp with SKALE."
@@ -13,30 +15,46 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 ## Implementation Example
 
-**Package Install**
-```shell
-npm install --save web3 @walletconnect/web3-provider
-```
+<Steps>
 
-**Integration**
-```javascript
-import WalletConnectProvider from "@walletconnect/web3-provider";
-import Web3 from 'web3';
+1. ##### Package Install
+
+    <Tabs>
+        <TabItem label="npm">
+        ```shell
+        npm install --save web3 @walletconnect/web3-provider
+
+        ```
+        </TabItem>
+        <TabItem label="yarn">
+        ```shell
+        yarn add --save web3 @walletconnect/web3-provider
+        ```
+        </TabItem>
+    </Tabs>
+
+2. ##### Integration
+  
+    ```javascript
+    import WalletConnectProvider from "@walletconnect/web3-provider";
+    import Web3 from 'web3';
 
 
-// Your setup information
-const endpoint = 'your_skale_network_rpc';             // your SKALE Chain endpoint
-const ethereumEndpoint = 'https://your.ethereum.endpoint'   // your Ethereum endpoint
-const skaleChainId = 123456                                 // chainId of your SKALE Chain
+    // Your setup information
+    const endpoint = 'your_skale_network_rpc';             // your SKALE Chain endpoint
+    const ethereumEndpoint = 'https://your.ethereum.endpoint'   // your Ethereum endpoint
+    const skaleChainId = 123456                                 // chainId of your SKALE Chain
 
-const provider = new WalletConnectProvider({
-    rpc: {
-      skaleChainId: endpoint,
-      4: ethereumEndpoint
-    }
-  });
-  await provider.enable();
-  const web3 = new Web3(provider);
-```
+    const provider = new WalletConnectProvider({
+        rpc: {
+          skaleChainId: endpoint,
+          4: ethereumEndpoint
+        }
+    });
+    await provider.enable();
+    const web3 = new Web3(provider);
+    ```
+
+</Steps>
 
 </ToolLayout>
