--- a/src/content/docs/builders/tools/wallets/mpc/thirdweb.mdx
+++ b/src/content/docs/builders/tools/wallets/mpc/thirdweb.mdx
@@ -4,6 +4,7 @@ description: Intro to
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
     introParagraph="Thirdweb provides a wallet solution that can accommodate different needs. Their connect wallet UI allows connecting with the common industry wallets (ex: Metamask, Coinbase, WalletConnect) as well as creating an MPC wallet with social logins."
@@ -14,57 +15,59 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 ## Implementation Example
 
-**Package Install**
+<Steps>
+1. ##### Package Install
 
-<Tabs>
-<TabItem label="npm">
-```shell
-npm install @thirdweb-dev/react
-```
-</TabItem>
-<TabItem label="yarn">
-```shell
-yarn add @thirdweb-dev/react
-```
-</TabItem>
-</Tabs>
+    <Tabs>
+    <TabItem label="npm">
+    ```shell
+    npm install @thirdweb-dev/react
+    ```
+    </TabItem>
+    <TabItem label="yarn">
+    ```shell
+    yarn add @thirdweb-dev/react
+    ```
+    </TabItem>
+    </Tabs>
 
-**Integration**
-```javascript
-import {
-  ThirdwebProvider,
-  ConnectWallet,
-  metamaskWallet,
-  coinbaseWallet,
-  localWallet,
-  embeddedWallet,
-} from "@thirdweb-dev/react";
+2. ##### Integration
+    ```javascript
+    import {
+      ThirdwebProvider,
+      ConnectWallet,
+      metamaskWallet,
+      coinbaseWallet,
+      localWallet,
+      embeddedWallet,
+    } from "@thirdweb-dev/react";
 
-export default function App() {
-  return (
-    <ThirdwebProvider
-      activeChain="nebula"
-      clientId="YOUR_CLIENT_ID"
-      locale={en()}
-      supportedWallets={[
-        metamaskWallet(),
-        coinbaseWallet({ recommended: true }),
-        localWallet(),
-        embeddedWallet({
-          auth: {
-            options: ["facebook", "google"],
-          },
-        }),
-      ]}
-    >
-      <ConnectWallet
-        theme={"dark"}
-        switchToActiveChain={true}
-        modalSize={"compact"}
-      />
-    </ThirdwebProvider>
-  );
-}
-```
+    export default function App() {
+      return (
+        <ThirdwebProvider
+          activeChain="nebula"
+          clientId="YOUR_CLIENT_ID"
+          locale={en()}
+          supportedWallets={[
+            metamaskWallet(),
+            coinbaseWallet({ recommended: true }),
+            localWallet(),
+            embeddedWallet({
+              auth: {
+                options: ["facebook", "google"],
+              },
+            }),
+          ]}
+        >
+          <ConnectWallet
+            theme={"dark"}
+            switchToActiveChain={true}
+            modalSize={"compact"}
+          />
+        </ThirdwebProvider>
+      );
+    }
+    ```
+</Steps>
 
 </ToolLayout>
