--- a/src/content/docs/builders/tools/wallets/non-custodial/coinbase.mdx
+++ b/src/content/docs/builders/tools/wallets/non-custodial/coinbase.mdx
@@ -3,6 +3,7 @@ title: Coinbase
 description: Intro to Coinbase
 ---
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
     introParagraph="Coinbase Wallet is a self-custody crypto wallet, available as a browser extension and a mobile app on Android and iOS"
@@ -13,32 +14,35 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 ## Implementation Example
 
-**Package Install**
-```shell
-npm install --save web3 @coinbase/wallet-sdk
-```
-**Integration**
-````javascript
-import CoinbaseWalletSDK from '@coinbase/wallet-sdk'
-import Web3 from 'web3'
+<Steps>
+1. ##### Package Install
+    ```shell
+    npm install --save web3 @coinbase/wallet-sdk
+    ```
+2. ##### Integration
+    ````javascript
+    import CoinbaseWalletSDK from '@coinbase/wallet-sdk'
+    import Web3 from 'web3'
 
-const APP_NAME = 'My Awesome App'
-const APP_LOGO_URL = 'https://example.com/logo.png'
-const SKALE_JSONRPC_URL = 'your_skale_network_rpc'
-const SKALE_CHAIN_ID = 123456
+    const APP_NAME = 'My Awesome App'
+    const APP_LOGO_URL = 'https://example.com/logo.png'
+    const SKALE_JSONRPC_URL = 'your_skale_network_rpc'
+    const SKALE_CHAIN_ID = 123456
 
-// Initialize Coinbase Wallet SDK
-export const coinbaseWallet = new CoinbaseWalletSDK({
-  appName: APP_NAME,
-  appLogoUrl: APP_LOGO_URL,
-  darkMode: false
-})
+    // Initialize Coinbase Wallet SDK
+    export const coinbaseWallet = new CoinbaseWalletSDK({
+      appName: APP_NAME,
+      appLogoUrl: APP_LOGO_URL,
+      darkMode: false
+    })
 
-// Initialize a Web3 Provider object
-export const skale = coinbaseWallet.makeWeb3Provider(SKALE_JSONRPC_URL, SKALE_CHAIN_ID)
+    // Initialize a Web3 Provider object
+    export const skale = coinbaseWallet.makeWeb3Provider(SKALE_JSONRPC_URL, SKALE_CHAIN_ID)
 
-// Initialize a Web3 object
-export const web3 = new Web3(skale)
-````
+    // Initialize a Web3 object
+    export const web3 = new Web3(skale)
+    ````
+</Steps>
+
 
 </ToolLayout>
