--- a/src/content/docs/builders/tools/wallets/non-custodial/portis.mdx
+++ b/src/content/docs/builders/tools/wallets/non-custodial/portis.mdx
@@ -3,6 +3,7 @@ title: Portis
 description: Intro to Portis
 ---
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
     introParagraph="Portis is a non-custodial Web3 wallet SDK supported by a variety of `evergreen` browsers. The Portis SDK allows you to integrate your dApp with SKALE."
@@ -13,30 +14,32 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 ## Implementation Example
 
-**Package Install**
-```shell
-npm install --save web3 @portis/web3
-```
-**Integration**
-```javascript
-import Portis from '@portis/web3';
-import Web3 from 'web3';
+<Steps>
+1. ##### Package Install
+    ```shell
+    npm install --save web3 @portis/web3
+    ```
+2. ##### Integration
+    ```javascript
+    import Portis from '@portis/web3';
+    import Web3 from 'web3';
 
 
-// Your setup information
-const endpoint = 'your_skale_network_rpc'; // your SKALE Chain endpoint
-const skaleChainId = 123456                     // chainId of your SKALE Chain
-const testAPIKey = 'your_api_key';
+    // Your setup information
+    const endpoint = 'your_skale_network_rpc'; // your SKALE Chain endpoint
+    const skaleChainId = 123456                     // chainId of your SKALE Chain
+    const testAPIKey = 'your_api_key';
 
-const mySKALEChain = {
-    nodeUrl: endpoint,
-    chainId: skaleChainId,
-    nodeProtocol: "rpc"
-}
+    const mySKALEChain = {
+        nodeUrl: endpoint,
+        chainId: skaleChainId,
+        nodeProtocol: "rpc"
+    }
 
-// Setting network
-const portis = new Portis(testAPIKey, mySKALEChain);
-let web3 = new Web3(portis.provider);
-```
+    // Setting network
+    const portis = new Portis(testAPIKey, mySKALEChain);
+    let web3 = new Web3(portis.provider);
+    ```
+</Steps>
 
 </ToolLayout>
